@@ -4,7 +4,7 @@ ThisBuild / scalaVersion := "2.13.16"
 
 lazy val root = (project in file("."))
   .settings(
-    name := "scala-curse",
+    name := "scala-course",
     scalacOptions ++= Seq(
       "-deprecation",
       "-feature",
@@ -12,5 +12,22 @@ lazy val root = (project in file("."))
       "-Xlint",
       "-Wunused"
     ),
-    libraryDependencies += "org.scalatest" %% "scalatest" % "3.2.18" % Test
+    libraryDependencies ++= Seq(
+      "org.scalatest"    %% "scalatest" % "3.2.18" % Test,
+      "org.apache.spark" %% "spark-sql" % "3.5.3"
+    ),
+    // Required to run Spark on Java 17+
+    fork := true,
+    javaOptions ++= Seq(
+      "--add-opens=java.base/java.lang=ALL-UNNAMED",
+      "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+      "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+      "--add-opens=java.base/java.io=ALL-UNNAMED",
+      "--add-opens=java.base/java.net=ALL-UNNAMED",
+      "--add-opens=java.base/java.nio=ALL-UNNAMED",
+      "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+      "--add-opens=java.base/java.util=ALL-UNNAMED",
+      "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+      "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED"
+    )
   )
